@@ -12,3 +12,4 @@ Type=Application
 Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
 OnlyShowIn=XFCE;
 StartupNotify=true
+X-XfcePluggable=true
