@@ -32,6 +32,7 @@ Xfce 4.6beta1 (Xfce 4.5.91):
   * Add style properties to enable painting a text shadow 'under' the
     desktop icon text labels (bug 4412).  Patch from Andrea Santilli.
   * Add backdrop image preview to settings dialog.
+  * Make settings dialog pluggable into the Xfce Settings Manager.
 
 
 Xfce 4.6alpha (Xfce 4.5.90):
